# waifu-calendar

./: Cargo.toml  Dockerfile  README.md  fly.toml
assets/: humans.txt
src/: birthdays.graphql  character.rs  http.rs  ics.rs  lib.rs  main.rs
templates/: calendar.hbs  character_list.hbs  character_list_today.hbs  index.hbs  internal_server_error.hbs  layout.hbs  service_unavailable.hbs  too_many_requests.hbs  user_not_found.hbs
