[package]
name = "waifu-calendar"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Rosa Richter"]
description = "A tool to fetch your favorite characters' birthdays from AniList"
repository = "https://github.com/Cantido/waifu-calendar"
license = "AGPL-3.0-or-later"
keywords = ["anime", "calendar"]
# No categories seem to apply :(

[[bin]]
name = "waifu-server"
required-features = ["http"]

[[bin]]
name = "waifucal"
required-features = ["cli"]

[features]
default = ["cli", "http"]
http = [
  "ics",
  "dep:axum",
  "dep:env_logger",
  "dep:handlebars",
  "dep:moka",
  "dep:recloser",
  "dep:tokio",
  "dep:tower-http",
]
ics = [
  "dep:ics",
  "dep:uuid"
]
cli = [
  "ics",
  "dep:clap",
  "dep:tokio",
  "dep:shadow-rs"
]

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", optional = true }
clap = { version = "4.5.37", features = ["derive"], optional = true }
env_logger = { version = "0.11.6", optional = true }
graphql_client = "0.14.0"
handlebars = { version = "6.2.0", features = ["dir_source"], optional = true }
ics = { version = "0.5.8", optional = true }
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"], optional = true }
recloser = { version = "1.1.1", optional = true }
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
shadow-rs = { version = "1.0.1", optional = true }
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"], optional = true }
tower-http = { version = "0.6.2", features = ["fs"], optional = true }
tz-rs = "0.7.0"
tzdb = "0.7.2"
uuid = { version = "1.16.0", features = ["v7"], optional = true }

[build-dependencies]
shadow-rs = "1.0.1"
